fix footer contrast

--- a/style.css
+++ b/style.css
@@ -71,5 +71,5 @@ button:disabled {
 
 footer {
   font-size: .75em;
-  color: rgba(200, 200, 200, .8);
+  color: rgba(180, 180, 180, 1);
 }
